Completed feature set 2

--- a/memory_match/index.html
+++ b/memory_match/index.html
@@ -26,25 +26,79 @@
       </aside>
     </div>
     <div class="col-10">
-      <main>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
-        <div class="col-2"></div>
+      <main id="gameCards">
+        <div class="col-2">
+          <div class="card-front js-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front docker-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front github-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front html-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front css-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front mysql-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front node-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front php-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front react-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front js-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front docker-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front github-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front html-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front css-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front mysql-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front node-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front php-logo"></div>
+          <div class="card-back"></div>
+        </div>
+        <div class="col-2">
+          <div class="card-front react-logo"></div>
+          <div class="card-back"></div>
+        </div>
       </main>
       </div>
     </div>
