--- a/memory_match/index.html
+++ b/memory_match/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   <div class="container">
-  <div class="modal-display">
-    <div class="modal-content">Congratulations You have Won!!!</div>
+  <div class="modal-display hidden" id="modal">
+    <div class="modal-content">
+      <p>Congratulations You Won!!!!!</p>
+    </div>
   </div>
     <div class="row">
       <header>LFZ Memory Match</header>
