Completed feature set 5

--- a/memory_match/index.html
+++ b/memory_match/index.html
@@ -23,11 +23,11 @@
       <aside>
         <div>Stats</div>
         <div>Games Played</div>
-        <div>0</div>
+        <div id="games-played">0</div>
         <div>Attempts</div>
-        <div>0</div>
+        <div id="attempts">0</div>
         <div>Accuracy</div>
-        <div>0</div>
+        <div id="accuracy">0</div>
       </aside>
     </div>
     <div class="col-10">
