--- a/memory_match/index.html
+++ b/memory_match/index.html
@@ -13,6 +13,7 @@
   <div class="modal-display hidden" id="modal">
     <div class="modal-content">
       <p>Congratulations You Won!!!!!</p>
+      <button id="reset-game">Would You Like to Play Again?</button>
     </div>
   </div>
     <div class="row">
