--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="row">
-      <header>LFZ Memory Match</header>
+      <header>MLB Memory Match</header>
     </div>
     <div class="row">
       <div class="col-2">
@@ -36,75 +36,75 @@
       <div class="col-10">
         <main id="gameCards">
           <div class="col-2">
-            <div class="card-front js-logo"></div>
+            <div class="card-front astros-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front docker-logo"></div>
+            <div class="card-front oakland-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front github-logo"></div>
+            <div class="card-front dodgers-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front html-logo"></div>
+            <div class="card-front giants-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front css-logo"></div>
+            <div class="card-front cubs-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front mysql-logo"></div>
+            <div class="card-front rockies-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front node-logo"></div>
+            <div class="card-front redsox-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front php-logo"></div>
+            <div class="card-front yankees-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front react-logo"></div>
+            <div class="card-front brewers-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front js-logo"></div>
+            <div class="card-front brewers-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front docker-logo"></div>
+            <div class="card-front yankees-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front github-logo"></div>
+            <div class="card-front redsox-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front html-logo"></div>
+            <div class="card-front rockies-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front css-logo"></div>
+            <div class="card-front cubs-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front mysql-logo"></div>
+            <div class="card-front giants-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front node-logo"></div>
+            <div class="card-front dodgers-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front php-logo"></div>
+            <div class="card-front oakland-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2">
-            <div class="card-front react-logo"></div>
+            <div class="card-front astros-logo"></div>
             <div class="card-back"></div>
           </div>
         </main>
