--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Memory Match</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous">
 </head>
 
 <body>
