added audio muted control to html that has organ music muted and the ability for the user to play the soundtrack

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     </div>
     <div class="row">
       <header>MLB Memory Match</header>
+      <div>
+        <audio controls muted>
+          <source src="assets/organ.mp3" type="audio/mpeg">
+        </audio>
+      </div>
     </div>
     <div class="row">
       <div class="col-2">
