changed statistic section to include a batting average and an at bats section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </div>
     <div class="row">
       <header>MLB Memory Match</header>
-      <div>
-        <audio controls muted>
+      <!-- <div>
+        <audio controls>
           <source src="assets/organ.mp3" type="audio/mpeg">
         </audio>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-2">
@@ -33,9 +33,9 @@
           <div>Stats</div>
           <div>Games Played</div>
           <div id="games-played">0</div>
-          <div>Attempts</div>
+          <div>At Bats</div>
           <div id="attempts">0</div>
-          <div>Accuracy</div>
+          <div>Batting Average</div>
           <div id="accuracy">0</div>
         </aside>
       </div>
