working on icon for music audio theme not completed

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     </div>
     <div class="row">
       <header>MLB Memory Match</header>
-      <!-- <div>
-        <audio controls>
+      <div class="volumeControl">
+        <i id="icon" class="fas fa-volume-mute volumeOn"><audio><source src="assets/organ.mp3"></audio></i>
+        <!-- <audio controls>
           <source src="assets/organ.mp3" type="audio/mpeg">
-        </audio>
-      </div> -->
+        </audio> -->
+      </div>
     </div>
     <div class="row">
       <div class="col-2">
