--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <source src="assets/organ.mp3" type="audio/mpeg">
           </audio>
         </i>
-        <!-- <audio controls>
-          <source src="assets/organ.mp3" type="audio/mpeg">
-        </audio> -->
       </div>
     </div>
     <div class="row">
@@ -37,7 +34,7 @@
         <aside>
           <div>Stats</div>
           <div>Games Played</div>
-          <div id="games-played">0</div>
+          <div id="games-played" class="baseball">0</div>
           <div>At Bats</div>
           <div id="attempts">0</div>
           <div>Batting Average</div>
