added homerun gif for modal

--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
 
 <body>
   <div class="container">
-    <div class="modal-display hidden" id="modal">
+    <!-- <div class="modal-display hidden" id="modal">
       <div class="modal-content">
         <p>Congratulations You Won!!!!!</p>
         <button id="reset-game">Would You Like to Play Again?</button>
+      </div>
+    </div> -->
+    <div class="modal-display" id="modal">
+      <div class="modal-content">
+        <div class="homerun"></div>
+        <button id="reset-game">Would you Like to play again?</button>
+        <!-- <p>Welcome to MLB Memory Match!</p>
+        <p>Goal:</p>
+        <p>Have a batting average over <b>.500</b> to hit a Home Run!</p>
+        <button id="reset-game">Would you like to play?</button> -->
       </div>
     </div>
     <div class="row">
