added strikeout modal

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </div> -->
     <div class="modal-display" id="modal">
       <div class="modal-content">
-        <div class="homerun"></div>
+        <div class="modal-header">You Struck Out!!!</div>
+        <div class="strikeout"></div>
         <button id="reset-game">Would you Like to play again?</button>
         <!-- <p>Welcome to MLB Memory Match!</p>
         <p>Goal:</p>
