completed strikout modal

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="modal-display" id="modal">
       <div class="modal-content">
         <div class="modal-header">You Struck Out!!!</div>
-        <div class="strikeout"></div>
-        <button id="reset-game">Would you Like to play again?</button>
+        <div class="strikeout"></div><br>
+        <i class="fas fa-baseball-ball"></i><button id="reset-game">Would you Like to play again?</button><i class="fas fa-baseball-ball"></i>
         <!-- <p>Welcome to MLB Memory Match!</p>
         <p>Goal:</p>
         <p>Have a batting average over <b>.500</b> to hit a Home Run!</p>
