added home run modal

--- a/index.html
+++ b/index.html
@@ -19,16 +19,23 @@
         <button id="reset-game">Would You Like to Play Again?</button>
       </div>
     </div> -->
-    <div class="modal-display" id="modal">
+    <div class="modal-display hidden" id="modal-3">
       <div class="modal-content">
         <div class="modal-header">You Struck Out!!!</div>
         <div class="strikeout"></div><br>
-        <i class="fas fa-baseball-ball"></i><button id="reset-game">Would you Like to play again?</button><i class="fas fa-baseball-ball"></i>
+        <i class="fas fa-baseball-ball"></i><button id="reset-game-2">Would you Like to play again?</button><i class="fas fa-baseball-ball"></i>
         <!-- <p>Welcome to MLB Memory Match!</p>
         <p>Goal:</p>
         <p>Have a batting average over <b>.500</b> to hit a Home Run!</p>
         <button id="reset-game">Would you like to play?</button> -->
       </div>
+    <div class="modal-display" id="modal-2">
+      <div class="modal-content">
+        <div class="modal-header">HOMERUN !!!</div>
+        <div class="homerun"></div><br>
+        <i class="fas fa-baseball-ball"></i><button id="reset-game">Would you Like to play again?</button><i class="fas fa-baseball-ball"></i>
+      </div>
+    </div>
     </div>
     <div class="row">
       <header>MLB Memory Match</header>
