--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-2">
         <aside>
-          <div>Stats</div>
+          <div id="mainStats">Stats</div>
           <div>Games Played</div>
           <div id="games-played" class="baseball">0</div>
           <div>At Bats</div>
