increased mute icon size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="row">
       <header>MLB Memory Match</header>
       <div class="volumeControl">
-        <i id="icon" class="fas fa-volume-mute volumeOn">
+        <i id="icon" class="fas fa-volume-mute fa-2x volumeOn">
           <audio loop class="hidden">
             <source src="assets/organ.mp3" type="audio/mpeg">
           </audio>
