completed modal media queries for iphone 6 7 and 8

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="modal-display hidden" id="modal">
       <div class="modal-content">
         <div class="modal-header">HOMERUN !!!</div>
-        <div class="homerun"></div><br>
+        <div class="homerun"></div><br id="break">
         <i class="fas fa-baseball-ball"></i><button id="reset-game">Would you Like to play again?</button><i class="fas fa-baseball-ball"></i>
       </div>
     </div>
