--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <div class="col-2">
         <aside>
           <div id="mainStats">Stats</div>
-          <div>Games Played</div>
-          <div id="games-played" class="baseball">0</div>
-          <div>At Bats</div>
-          <div id="attempts">0</div>
-          <div>Batting Average</div>
-          <div id="accuracy">0</div>
+          <div class="statsBorder">Games Played</div>
+          <div id="games-played" class="baseball statsBorder">0</div>
+          <div class="statsBorder">At Bats</div>
+          <div id="attempts" class="statsBorder">0</div>
+          <div class="statsBorder">Batting Average</div>
+          <div id="accuracy" class="statsBorder">0</div>
         </aside>
       </div>
       <div class="col-10">
