--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="grid.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -20,7 +21,7 @@
     </div>
     </div>
     <div class="row">
-      <header>MLB Memory Match</header>
+      <header>Major League Memory</header>
       <div class="volumeControl">
         <i id="icon" class="fas fa-volume-mute fa-2x volumeOn">
           <audio loop class="hidden">
